syntax = "proto3";

package proto;

option go_package = "github.com/hashgraph/hedera-sdk-go/proto";

option java_package = "com.hedera.hashgraph.proto";
option java_multiple_files = true;

import "proto/BasicTypes.proto";

// See [ConsensusService.deleteTopic()](#proto.ConsensusService)
message ConsensusDeleteTopicTransactionBody {
    TopicID topicID = 1; // Topic identifier.
}
